fixed button text color contrast

--- a/dice-game/src/dice.css
+++ b/dice-game/src/dice.css
@@ -1,6 +1,6 @@
 button {
   --bg-color: rgb(182, 182, 182);
-  --fg-color: rgb(84, 136, 233);
+  --fg-color: rgb(13, 38, 85);
 
   padding: 0.5rem 0.75rem;
   background-color: var(--bg-color);
@@ -56,7 +56,7 @@ p {
   align-items: center;
   justify-content: center;
   margin: 10px;
-  background-color: rgb(79, 49, 250);
+  background-color: rgb(106, 81, 253);
   width: 65px;
   height: 65px;
   border-radius: 10px;
